--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@astrojs/node": "^9.2.2",
     "@auth/core": "^0.37.4",
     "@libsql/client": "^0.15.9",
+    "@prisma/adapter-libsql": "^6.11.1",
+    "@prisma/client": "6.11.1",
     "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.10.0",
     "auth-astro": "^4.2.0",
@@ -20,6 +22,7 @@
   "devDependencies": {
     "@typescript-eslint/parser": "^8.34.1",
     "eslint": "^9.29.0",
-    "eslint-plugin-astro": "^1.3.1"
+    "eslint-plugin-astro": "^1.3.1",
+    "prisma": "6.11.1"
   }
 }
