--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.10.0"
+    "@astrojs/node": "^9.2.2",
+    "@auth/core": "^0.37.4",
+    "@libsql/client": "^0.15.9",
+    "@tailwindcss/vite": "^4.1.10",
+    "astro": "^5.10.0",
+    "auth-astro": "^4.2.0",
+    "tailwindcss": "^4.1.10"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^8.34.1",
+    "eslint": "^9.29.0",
+    "eslint-plugin-astro": "^1.3.1"
   }
 }
