--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/node": "^9.2.2",
     "@auth/core": "^0.37.4",
+    "@auth/prisma-adapter": "^2.10.0",
     "@libsql/client": "^0.15.9",
     "@prisma/adapter-libsql": "^6.11.1",
     "@prisma/client": "6.11.1",
