--- a/package.json
+++ b/package.json
@@ -10,20 +10,30 @@
   },
   "dependencies": {
     "@astrojs/node": "^9.2.2",
+    "@astrojs/preact": "^4.1.0",
+    "@astrojs/react": "^4.3.0",
     "@auth/core": "^0.37.4",
     "@auth/prisma-adapter": "^2.10.0",
     "@libsql/client": "^0.15.9",
     "@prisma/adapter-libsql": "^6.11.1",
     "@prisma/client": "6.11.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.10.0",
     "auth-astro": "^4.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
+    "preact": "^10.26.9",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^8.34.1",
     "eslint": "^9.29.0",
     "eslint-plugin-astro": "^1.3.1",
-    "prisma": "6.11.1"
+    "prisma": "6.11.1",
+    "tw-animate-css": "^1.3.5"
   }
 }
