--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "auth-astro": "^4.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "invokers-polyfill": "^0.5.5",
     "lucide-preact": "^0.525.0",
     "preact": "^10.26.9",
+    "react-hook-form": "^7.60.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10"
   },
