--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,14 +7,26 @@
   "exclude": [
     "dist"
   ],
+
+
+  "paths": {
+      "react": ["./node_modules/preact/compat/"],
+      "react-dom": ["./node_modules/preact/compat/"]
+    },
+  
+
   "compilerOptions": {
     "baseUrl": ".",
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
+    
     "paths": {
       "@/*": [
         "src/*"
-      ]
-    },
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact"
+      ],
+      "react": ["./node_modules/preact/compat/"],
+      "react-dom": ["./node_modules/preact/compat/"]
+    }
+
   }
 }
