--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@libsql/client": "^0.15.9",
     "@lucide/astro": "^0.532.0",
+    "@nanostores/preact": "^1.0.0",
     "@prisma/adapter-libsql": "^6.11.1",
     "@prisma/client": "6.11.1",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -27,6 +28,7 @@
     "clsx": "^2.1.1",
     "invokers-polyfill": "^0.5.5",
     "lucide-preact": "^0.525.0",
+    "nanostores": "^1.0.1",
     "preact": "^10.26.9",
     "react-hook-form": "^7.60.0",
     "tailwind-merge": "^3.3.1",
