--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@libsql/client": "^0.15.9",
     "@lucide/astro": "^0.532.0",
+    "@midudev/tailwind-animations": "^0.2.0",
     "@nanostores/preact": "^1.0.0",
     "@prisma/adapter-libsql": "^6.11.1",
     "@prisma/client": "6.11.1",
